Now element is attached to bottom of the body Added destroy method

--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
 </head>
 
 <body>
-    <div id="holder"></div>
     <script>
-        var d = new DatePicker('#holder');
+        var d = new DatePicker();
         d.setSelectedDate(new Date(2014, 4, 24));
         d.show();
     </script>
