--- a/index.html
+++ b/index.html
@@ -7,14 +7,17 @@
     <meta name="viewport" content="width=device-width, user-scalable=no">
     <script src="//cdnjs.cloudflare.com/ajax/libs/less.js/1.7.0/less.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/hammer.js/1.0.5/hammer.js"></script>
-    <script src="script.js"></script>
+
 </head>
 
 <body>
+    <input class="my-input" type="text" placeholder="Date..."/>
+    <input class="my-input" type="text" placeholder="Date..."/>
+    <input class="my-input" type="text" placeholder="Date..."/>
+
+    <script src="datepicker.js"></script>
     <script>
-        var d = new DatePicker();
-        d.setSelectedDate(new Date(2014, 4, 24));
-        d.show();
+        var d = new DatePicker('.my-input');
     </script>
 </body>
 
