Added year pager

--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
     <link rel="stylesheet" type="text/less" href="style.less">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, user-scalable=no">
+    <style>
+        .my-input {
+            height: 30px;
+            line-height: 30px;
+            font-size: 16px;
+            border-radius: 5px;
+        }
+    </style>
 </head>
 
 <body>
