Added overlay Added options as second parameter to DatePicker constructor Added backdrop option

--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
                 drag : false,
                 transform : false
             }).on('tap', handler, false);
+        }, {
+            backdrop : true
         });
 
         var inputs = document.querySelectorAll('.my-input');
